# space-wars

./: CMakeLists.txt  README.md
include/Core/: Application.hpp  Resources.hpp  StateMachine.hpp  SystemInfo.hpp
include/Entity/: Asteroid.hpp  AsteroidField.hpp  AutoCannon.hpp  Button.hpp  Ship.hpp  StarAnimation.hpp
include/Entity/Base/: Animation.hpp
include/State/: HomeState.hpp  PauseState.hpp  PlayState.hpp
src/: main.cpp
src/Core/: Application.cpp  Resources.cpp  State.cpp  StateMachine.cpp  SystemInfo.cpp
src/Entity/: Asteroid.cpp  AutoCannon.cpp  Button.cpp  Ship.cpp
src/State/: HomeState.cpp  PauseState.cpp  PlayState.cpp
